[package]
authors = ["Phil Denhoff <phil@denhoff.ca>"]
edition = "2021"
name = "anylist_napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anylist_rs = { version = "0.3.3", default-features = false, features = [
  "rustls-tls",
] }
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
